server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__slurp_forward_into_an_array_past_a_comment.snap
---
source: server/src/editing/paredit/tests.rs
expression: "@[a|] # x\n b"
---
----- BEFORE ACTION
@[a] # x
   ↑
 b

----- AFTER ACTION: Slurp forward
@[a # x
 b]
