server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__slurp_forward_into_an_empty_list.snap
---
source: server/src/editing/paredit/tests.rs
expression: (|) c
---
----- BEFORE ACTION
() c
 ↑

----- AFTER ACTION: Slurp forward
(c)
