server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__slurp_forward_past_a_comment.snap
---
source: server/src/editing/paredit/tests.rs
expression: "(|) # keep\n x"
---
----- BEFORE ACTION
() # keep
 ↑
 x

----- AFTER ACTION: Slurp forward
( # keep
 x)
