server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__slurp_forward_takes_the_next_form.snap
---
source: server/src/editing/paredit/tests.rs
expression: (a |b) c
---
----- BEFORE ACTION
(a b) c
   ↑

----- AFTER ACTION: Slurp forward
(a b c)
