server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__splice_a_quoted_list.snap
---
source: server/src/editing/paredit/tests.rs
expression: "(x '(a| b))"
---
----- BEFORE ACTION
(x '(a b))
      ↑

----- AFTER ACTION: Splice
(x a b)
