server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__splice_a_vector.snap
---
source: server/src/editing/paredit/tests.rs
expression: "(a [b| c] d)"
---
----- BEFORE ACTION
(a [b c] d)
     ↑

----- AFTER ACTION: Splice
(a b c d)
