server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__wrap_a_selection.snap
---
source: server/src/editing/paredit/tests.rs
expression: (<a b> c)
---
----- BEFORE ACTION
(a b c)
 ▔▔▔

----- AFTER ACTION: Wrap with ( )
((a b) c)
