server/src/editing/paredit/snapshots/janet_zed_server__editing__paredit__tests__wrap_a_symbol.snap
---
source: server/src/editing/paredit/tests.rs
expression: (a |b)
---
----- BEFORE ACTION
(a b)
   ↑

----- AFTER ACTION: Wrap with [ ]
(a [b])
